hphp/test/quick/typedef_non_class_fail2.php.expectf

Fatal error: Argument 1 passed to woot() must be an instance of Point, null given in %s on line 10
